[package]
name = "kademlia"
version = "0.1.0"
authors = ["Lennart Vogelsang <lennart@vogelsang.berlin>"]
edition = "2018"

[lib]
name = "kademlia"
path = "src/lib.rs"

[[bin]]
name = "kad_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = "1.4"
generic-array = {version = "0.13", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
# todo: replace with msgpack?
serde_json = "1.0"
tokio = "0.1"
actix = "0.8"
hex = "0.3"
byteorder = "1.3"
bytes = "0.4"
log = "0.4"
rand = "0.6"
futures-preview = {version = "0.3.0-alpha.17", features=["async-await", "nightly"]}
env_logger = "0.6"